--- a/translation/uk/herb_collector.po
+++ b/translation/uk/herb_collector.po
@@ -20,47 +20,47 @@ msgstr ""
 
 #: herbalist.xml
 msgid "Herb collector"
-msgstr "Херб колектор"
+msgstr "Збирач трав"
 
 #: herbalist.xml
 msgid "And another good deed done. I could get used to this."
-msgstr "І ще одну добру справу зробили. Я міг звикнути до цього."
+msgstr "І ще одну добру справу зроблено. Я починаю звикати до цього."
 
 #: herbalist.xml
 msgid "The herbalist of Joringsbridge wants to have the berries of 10 bushes. \"..(10 - herbalist.bushes)..\" berries have been collected."
-msgstr "Травник з Joringsbridge хоче мати ягоди з 10 кущів. \".. (10 - herbalist.bushes)..\" ягоди були зібрані."
+msgstr "Травник з Джорінгсбріджа хоче мати ягоди з 10 кущів. \"..(10 - herbalist.bushes)..\" ягід були зібрані."
 
 #: herbalist.xml
 msgid "joringsbridge"
-msgstr "joringsbridge"
+msgstr "джорінгсбрідж"
 
 #: herbalist.xml
 msgid "Gertlinde Kampfer"
-msgstr "Gertlinde Кампфер"
+msgstr "Воїн Герлінде"
 
 #: herbalist.xml
 msgid "Herb gathering"
-msgstr "Херб збору"
+msgstr "Збирання трав"
 
 #: herbalist.xml
 msgid "Here, old women. Your berries."
-msgstr "Тут, стара. Ваші ягоди."
+msgstr "Ось, стара. Ваші ягоди."
 
 #: herbalist.xml
 msgid "Ah, well done, young one."
-msgstr "Ах, молодець, юнак."
+msgstr "Ах молодець, юначе."
 
 #: herbalist.xml
 msgid "Here, let me give you something in return."
-msgstr "Тут, дозвольте мені дати вам щось натомість."
+msgstr "Ось, дозволь мені дати тобі щось натомість."
 
 #: herbalist.xml
 msgid "I need more berries, if I am to do something useful with them."
-msgstr "Мені потрібно більше ягід, якщо я буду робити щось корисне з ними."
+msgstr "Мені потрібно більше ягід, якщо я буду робити з ними щось корисне."
 
 #: herbalist.xml
 msgid "Do you want to collect some berries after all?"
-msgstr "Ви хочете, щоб зібрати ягоди в кінці кінців?"
+msgstr "Ви хочете щоб я зібрав ягоди в кінці кінців?"
 
 #: herbalist.xml
 msgid "Accept Quest?"
@@ -80,7 +80,7 @@ msgstr "Ей, молодче!"
 
 #: herbalist.xml
 msgid "I see you are going to the Northern Meadow."
-msgstr "Я бачу, ви збираєтеся Північний Луг."
+msgstr "Я бачу, ви збираєтеся Північний луг."
 
 #: herbalist.xml
 msgid "That's right."
@@ -88,11 +88,11 @@ msgstr "Це вірно."
 
 #: herbalist.xml
 msgid "Quite a trick."
-msgstr "Досить трюк."
+msgstr "Досить хитро."
 
 #: herbalist.xml
 msgid "We were only walking through the gate."
-msgstr "Ми були тільки пішки через ворота."
+msgstr "Лише ми проходили крізь ворота."
 
 #: herbalist.xml
 msgid "Peace."
@@ -100,15 +100,15 @@ msgstr "Мир."
 
 #: herbalist.xml
 msgid "If you are roaming around there anyway, why don't you collect some berries for me?"
-msgstr "Якщо ви бродили там в будь-якому разі, чому б вам не зібрати ягоди для мене?"
+msgstr "Якщо ти все одно будеш там бродити, чому б тобі не зібрати для мене ягід?"
 
 #: herbalist.xml
 msgid "With all those goblins about an old woman can't even set a foot out of the village."
-msgstr "З усіма цими гоблінами про старій не може навіть встановити ногу з села."
+msgstr "З усіма цими гоблінами стара навіть не може висунути ніс з села."
 
 #: herbalist.xml
 msgid "Plants are not really my forte..."
-msgstr "Рослини насправді не моя сильна сторона ..."
+msgstr "Рослини насправді не моя сильна сторона..."
 
 #: herbalist.xml
 msgid "Fiddlesticks!"
@@ -116,81 +116,81 @@ msgstr "Дурниці!"
 
 #: herbalist.xml
 msgid "It's not like I want you to collect something exotic, you know."
-msgstr "Це не походить, я хочу, щоб збирати щось екзотичне, ви знаєте."
+msgstr "Я не хочу, щоб ти збирав щось екзотичне."
 
 #: herbalist.xml
 msgid "Just rilfberries."
-msgstr "Просто rilfberries."
+msgstr "Лише рільфи."
 
 #: herbalist.xml
 msgid "Look for big bushes with fancy red fruits."
-msgstr "Подивіться для великих кущів з химерними червоними фруктами."
+msgstr "Шукай великі кущі з химерними червоними фруктами."
 
 #: herbalist.xml
 msgid "You will find them for sure."
-msgstr "Ви знайдете їх напевно."
+msgstr "Ти знайдеш їх напевно."
 
 #: herbalist.xml
 msgid "I need the berries of at least ten bushes."
-msgstr "Мені потрібно ягід, принаймні десять кущів."
+msgstr "Мені потрібні ягоди принаймні з десяти кущів."
 
 #: herbalist.xml
 msgid "But only the red berries."
-msgstr "Але тільки червоні ягоди."
+msgstr "Але лише червоні ягоди."
 
 #: herbalist.xml
 msgid "The rest is of no use at all."
-msgstr "Останнє не має сенсу взагалі."
+msgstr "З решти зовсім немає користі."
 
 #: herbalist.xml
 msgid "Very well, if I find some, I'll bring them."
-msgstr "Дуже добре, якщо я знаходжу, я принесу їх."
+msgstr "Дуже добре, якщо я знайду їх, я принесу."
 
 #: herbalist.xml
 msgid "Very well, if we find some, we'll bring them."
-msgstr "Дуже добре, якщо ми знаходимо деякі, ми привеземо їх."
+msgstr "Дуже добре, якщо ми знайдемо їх, ми принесемо."
 
 #: herbalist.xml
 msgid "Thanks, sweety."
-msgstr "Спасибі, солодкий."
+msgstr "Спасибі, солодце."
 
 #: herbalist.xml
 msgid "Forget it, herb woman."
-msgstr "Забудьте про це, трава жінки."
+msgstr "Забудьте про це, травнице."
 
 #: herbalist.xml
 msgid "I'm not going to crawl through the meadows just to search for some stupid bushes."
-msgstr "Я не буду повзати через луки тільки для пошуку якоїсь дурний чагарників."
+msgstr "Я не буду лазити по луках лише щоб знайти якісь дурні чагарники."
 
 #: herbalist.xml
 msgid "Have it your way."
-msgstr "У нього свій шлях."
+msgstr "Ну, як хочеш."
 
 #: herbalist.xml
 msgid "But if you change your mind, I'm not running away from here."
-msgstr "Але якщо ви зміните свою думку, я не тікав звідси."
+msgstr "Але якщо ти зміниш думку, я буду тут."
 
 #: herbalist.xml
 msgid "Very well, if I find some, I'll bring them along."
-msgstr "Дуже добре, якщо я знаходжу, я привезу їх з собою."
+msgstr "Дуже добре, якщо я знайду їх, я принесу з собою."
 
 #: herbalist.xml
 msgid "Still no."
-msgstr "Проте немає."
+msgstr "Все ще ні."
 
 #: herbalist.xml
 msgid "Tell me when you're not too mighty for simple work anymore, sweety."
-msgstr "Скажіть, коли ви не занадто могутні для простої роботи більше, мила."
+msgstr "Скажи мені, коли ти будеш не занадто величний для простої роботи, солодце."
 
 #: herbalist.xml
 msgid "Watch your tongue, hag!"
-msgstr "Слідкуйте за мовою, відьма!"
+msgstr "Слідкуй за мовою, відьма!"
 
 #: herbalist.xml
 msgid "aisNorthMeadow"
-msgstr ""
+msgstr "Північний луг"
 
 #: herbalist.xml
 msgid "Collect\"..bushes_left..\" more herbs."
-msgstr "Зберіть ще \".. bushes_left..\" трав."
+msgstr "Зберіть ще\"..bushes_left..\" рослин."
 
