--- a/translation/uk/joringsbridge.po
+++ b/translation/uk/joringsbridge.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
+"PO-Revision-Date: 2011-09-10 17:14+0300\n"
 "Last-Translator: Igor Paliychuk <mansonigor@gmail.com>\n"
 "Language-Team: \n"
 "Language: Ukrainian\n"
@@ -20,23 +20,23 @@ msgstr ""
 
 #: joringsbridge.xml
 msgid "Joringsbridge"
-msgstr ""
+msgstr "Джорінгсбрідж"
 
 #: joringsbridge.xml
 msgid "joringsbridge"
-msgstr ""
+msgstr "джорінгсбрідж"
 
 #: joringsbridge.xml
 msgid "I'm begging you, my prince!"
-msgstr "Я тебе прошу, мій принц!"
+msgstr "Я вас прошу, мій принце!"
 
 #: joringsbridge.xml
 msgid "Leave at least a handful of soldiers here."
-msgstr "Залиште хоча б жменька солдат тут."
+msgstr "Залиште тут хоча б жменьку солдатів."
 
 #: joringsbridge.xml
 msgid "I can barly guard the village, let alone the surrounding farms!"
-msgstr "Я можу barly охороняти село, не кажучи вже про прилеглих ферм!"
+msgstr "Я ледве можу охороняти село, не кажучи вже про прилеглі ферми!"
 
 #: joringsbridge.xml
 msgid "Silence!"
@@ -52,19 +52,19 @@ msgstr "Безпеки країни має абсолютний пріорите
 
 #: joringsbridge.xml
 msgid "Surely you can handle a hand full of lousy goblins."
-msgstr "Звичайно, ви можете впоратися рука, повна паршивий гоблінів."
+msgstr "Звичайно ви можете впоратися зі жменькою паршивих гоблінів."
 
 #: joringsbridge.xml
 msgid "Not to mention you have a mighty summoner at your side."
-msgstr "Не кажучи вже у вас є могутнім прізивателя на вашому боці."
+msgstr "Не кажучи вже про те, що на вашому боці є могутній заклинач."
 
 #: joringsbridge.xml
 msgid "That's more than enough."
-msgstr "Це більше, ніж достатньо."
+msgstr "Цього більше, ніж достить."
 
 #: joringsbridge.xml
 msgid "But the honourable mage has other duties!"
-msgstr "Але почесне мага є й інші обов'язки!"
+msgstr "Але почесний маг має інші обов'язки!"
 
 #: joringsbridge.xml
 msgid "Quite so!"
@@ -72,27 +72,33 @@ msgstr "Абсолютно вірно!"
 
 #: joringsbridge.xml
 msgid "The pursuit of pathetic goblins is neither my duty nor do I see the point of such absurd amusement."
-msgstr "Погоня за жалюгідні гобліни не є ні боргом і я не бачу сенсу в таких абсурдних розваг."
+msgstr ""
+"Погоня за жалюгідними гоблінами не входить в мої обов'язки і я не бачу сенсу "
+"в таких абсурдних розвагах."
 
 #: joringsbridge.xml
 msgid "What would you do were the village to be attacked while I was on a fruitless hunt for goblins?"
-msgstr "Що б ви зробили, було село, щоб піддатися нападу в той час як я був на безплідну полювання на гоблінів?"
+msgstr ""
+"Що б ви зробили, якби село піддалось нападу в той час як я був на "
+"безплідному полюванні на гоблінів?"
 
 #: joringsbridge.xml
 msgid "And you really have no time to help out a bit?"
-msgstr "І ви дійсно не мають часу, щоб виручити трохи?"
+msgstr "І ви дійсно не маєте часу, щоб трохи нам допомогти?"
 
 #: joringsbridge.xml
 msgid "My humble apologies, but the council has given me very important tasks."
-msgstr "Мій скромний вибачення, але рада дала мені дуже важливі завдання."
+msgstr "Мої скромні вибачення, але Рада дала мені дуже важливі завдання."
 
 #: joringsbridge.xml
 msgid "As much as I'd like to help, I don't have any room for such a thing."
-msgstr "Стільки, скільки я хотів би допомогти, у мене немає місця для такої речі."
+msgstr "Як я б не хотів допомогти, у мене немає місця для такої речі."
 
 #: joringsbridge.xml
 msgid "But may I use this unique opportunity to congratulate you on your upcoming wedding with the archmage Ireana of"
-msgstr "Але я можу використовувати цю унікальну можливість привітати Вас з майбутнього весілля з архимаг Ireana з"
+msgstr ""
+"Але я можу використати цю унікальну можливість щоб привітати Вас з майбутнім "
+"весіллям з архимагою Іреаною"
 
 #: joringsbridge.xml
 msgid "Thanks, that is enough."
@@ -100,23 +106,25 @@ msgstr "Спасибі, цього достатньо."
 
 #: joringsbridge.xml
 msgid "Sergeant Lutterer"
-msgstr "Сержант Lutterer"
+msgstr "Сержант Люттерер"
 
 #: joringsbridge.xml
 msgid "Self-satisfied parasite, that mage!"
-msgstr "Самовдоволені паразита, що маг!"
+msgstr "Самовдоволений паразит, той маг!"
 
 #: joringsbridge.xml
 msgid "I just hope the kingdom has big granaries, if the greenskins torch the fields."
-msgstr "Я тільки сподіваюся, царство має великі зерносховища, якщо зеленокожіх факел полів."
+msgstr ""
+"Я лише сподіваюся, що королівство має великі зерносховища на випадок, якщо "
+"зеленошкірі запалять поля."
 
 #: joringsbridge.xml
 msgid "The presence of the mage alone will drive out every goblin!"
-msgstr "Наявність мага тільки будуть виганяти кожен гоблін!"
+msgstr "Лише одна наявність мага буде виганяти кожного гобліна!"
 
 #: joringsbridge.xml
 msgid "Stop bugging the prince with your incompetence."
-msgstr "Стоп підслуховування князь з вашою некомпетентності."
+msgstr "Досить доставати принца твоїм незнанням."
 
 #: joringsbridge.xml
 msgid "!"
@@ -124,35 +132,35 @@ msgstr "!"
 
 #: joringsbridge.xml
 msgid "Don't you have something better to do?"
-msgstr "Чи немає у вас щось краще робити?"
+msgstr "У тебе немає іншої роботи?"
 
 #: joringsbridge.xml
 msgid "And they say, my kind is cold-hearted..."
-msgstr "І вони кажуть, мої роду холодним серцем ..."
+msgstr "І вони кажуть, що мій рід є грубосерденим..."
 
 #: joringsbridge.xml
 msgid "And they say, our kind is cold-hearted..."
-msgstr "І вони кажуть, наш роду холодним серцем ..."
+msgstr "І вони кажуть, що наш рід є грубосерденим..."
 
 #: joringsbridge.xml
 msgid "Guards! Guards!"
-msgstr "Гвардійська! Гвардійська!"
+msgstr "Охорона! Охорона!"
 
 #: joringsbridge.xml
 msgid "Help! My farm is being raided by goblins!"
-msgstr "Допоможіть! Моя ферма в даний час рейдів гоблінів!"
+msgstr "Допоможіть! На мою ферму напали гобліни!"
 
 #: joringsbridge.xml
 msgid "My family..."
-msgstr "Моя сім'я ..."
+msgstr "Моя сім'я..."
 
 #: joringsbridge.xml
 msgid "Take the fool away!"
-msgstr "Візьміть дурень же!"
+msgstr "Заберіть звідси цього дурня!"
 
 #: joringsbridge.xml
 msgid "The prince has more important matters to tend to."
-msgstr "Князь є важливіші питання, як правило."
+msgstr "Принц повинен вирішувати важливіші питання."
 
 #: joringsbridge.xml
 msgid "Wait!"
@@ -164,11 +172,11 @@ msgstr "Що трапилося?"
 
 #: joringsbridge.xml
 msgid "Forgive me, my prince, but my wife and my children are still there."
-msgstr "Прости мене, мій принц, але моя дружина і мої діти все ще там."
+msgstr "Прости мене, мій принце, але моя дружина і мої діти все ще там."
 
 #: joringsbridge.xml
 msgid "I don't know how long the house will withstand them."
-msgstr "Я не знаю, як довго будинок буде протистояти їм."
+msgstr "Я не знаю, як довго будинок їх втримає."
 
 #: joringsbridge.xml
 msgid "I beg of you: help me!"
@@ -176,11 +184,11 @@ msgstr "Я прошу вас: допоможіть мені!"
 
 #: joringsbridge.xml
 msgid "We..."
-msgstr "Ми ..."
+msgstr "Ми..."
 
 #: joringsbridge.xml
 msgid "My prince!"
-msgstr "Мій принц!"
+msgstr "Мій принце!"
 
 #: joringsbridge.xml
 msgid "We don't have time!"
@@ -212,7 +220,7 @@ msgstr "2000 для кожного."
 
 #: joringsbridge.xml
 msgid "That could almost be worth the trouble."
-msgstr "Це може бути майже варто."
+msgstr "Це того вартує."
 
 #: joringsbridge.xml
 msgid "Don't even think about it!"
@@ -220,63 +228,64 @@ msgstr "Навіть не думайте про це!"
 
 #: joringsbridge.xml
 msgid "You are to go to Dwarfenwall immediately!"
-msgstr "Ви повинні піти в Dwarfenwall негайно!"
+msgstr "Ви повинні негайно йти в Дорфенваль!"
 
 #: joringsbridge.xml
 msgid "Where do you come from? Didn't I exclude you?"
-msgstr "Де ти взявся? Хіба я не виключає вас?"
+msgstr "Звідки ти взявся? Хіба я тебе не вигнав?"
 
 #: joringsbridge.xml
 msgid "Your trifles cannot stop me."
-msgstr "Ваш дрібниці не можуть зупинити мене."
+msgstr "Ваші дрібниці не можуть зупинити мене."
 
 #: joringsbridge.xml
 msgid "The blood always works..."
-msgstr "Крові завжди працює ..."
+msgstr "Кров завжди працює..."
 
 #: joringsbridge.xml
 msgid "Ah!"
-msgstr "Ах!"
+msgstr "Ай!"
 
 #: joringsbridge.xml
 msgid "The mage over there has another of those crystals on his staff, hasn't he?"
-msgstr "Мага там є ще один з тих кристалів на його співробітників, чи не так?"
+msgstr "Отой маг має ще один з тих кристалів на його палиці, чи не так?"
 
 #: joringsbridge.xml
 msgid "You people are really unnerving somehow."
-msgstr "Ви, люди дійсно нервує якось."
+msgstr "Люди, ви мене нервуєте."
 
 #: joringsbridge.xml
 msgid "Who cares what you think? Let the peasant be a peasant and get moving!"
-msgstr "Кого хвилює, що ви думаєте? Нехай селянин бути селянином і рухайтеся!"
+msgstr ""
+"Кого хвилює, що ти думаєш? Нехай селянин бути селянином і хай рухається!"
 
 #: joringsbridge.xml
 msgid "Well..."
-msgstr "Ну ..."
+msgstr "Ну..."
 
 #: joringsbridge.xml
 msgid "You have to go to Dwarfenwall immediately!"
-msgstr "Ви повинні піти до Dwarfenwall негайно!"
+msgstr "Ви повинні негайно піти в Дорфенваль!"
 
 #: joringsbridge.xml
 msgid "Where did you pop out from? Didn't we exclude you?"
-msgstr "Де ти вискочити з? Хіба ми не виключаємо вас?"
+msgstr "Звідки ти вискочив? Хіба я тебе не вигнав?"
 
 #: joringsbridge.xml
 msgid "Rubbish! Take a look at the crystal on the mege's staff."
-msgstr "Сміття! Погляньте на кристалі на персонал в mege."
+msgstr "Дурниці! Поглянь на кристал на палиці мага."
 
 #: joringsbridge.xml
 msgid "Looks like our model, doesn't it?"
-msgstr "Схоже, наша модель, чи не так?"
+msgstr "Схоже наша модель, чи не так?"
 
 #: joringsbridge.xml
 msgid "Whatever. Get moving!"
-msgstr "Яка різниця. Рухайтеся!"
+msgstr "Яка різниця. Вперед!"
 
 #: joringsbridge.xml
 msgid "Help the peasant?"
-msgstr "Допомога мужика?"
+msgstr "Допомогти селянину?"
 
 #: joringsbridge.xml
 msgid "Yes"
@@ -288,27 +297,27 @@ msgstr "Ні"
 
 #: joringsbridge.xml
 msgid "Only a stone would watch deedless."
-msgstr "Тільки камінь буде дивитися бездіяльний."
+msgstr "Лише камінь нічого не зробить."
 
 #: joringsbridge.xml
 msgid "Who knows how many sou... goblins are walking around there!"
-msgstr "Хто знає, скільки су ... гобліни ходять там!"
+msgstr "Хтозна, скільки ду... гоблінів там тиняються!"
 
 #: joringsbridge.xml
 msgid "And we get money. Two birds with one stone."
-msgstr "І ми отримуємо гроші. Двох птахів одним каменем."
+msgstr "І ми отримаємо гроші. Двох зайців одним пострілом."
 
 #: joringsbridge.xml
 msgid "What do you think you're doing? You are to go to Dwarfenwall!"
-msgstr "Як ви думаєте, що ви робите? Ви повинні піти в Dwarfenwall!"
+msgstr "Як ви думаєте, що ви зробите? Ви повинні йти в Доріенваль!"
 
 #: joringsbridge.xml
 msgid "When I get there was never part of the deal!"
-msgstr "Коли я там ніколи не була частиною угоди!"
+msgstr "Коли я прийшов, це не входило в угоду!"
 
 #: joringsbridge.xml
 msgid "If the city is lost, I'll just conquer it back!"
-msgstr "Якщо місто втратив, я просто завоювати її назад!"
+msgstr "Якщо місто втратять, я просто відвоюю його назад!"
 
 #: joringsbridge.xml
 msgid "So it's decided."
@@ -316,27 +325,27 @@ msgstr "Так що це вирішено."
 
 #: joringsbridge.xml
 msgid "When we get there was never part of the deal!"
-msgstr "Коли ми там ніколи не була частиною угоди!"
+msgstr "Коли ми прийшли, це не входило в угоду!"
 
 #: joringsbridge.xml
 msgid "If the city is lost, we'll just conquer it back!"
-msgstr "Якщо місто втрачено, ми просто завоювати її назад!"
+msgstr "Якщо місто втратять, ми просто відвоюємо його назад!"
 
 #: joringsbridge.xml
 msgid "Yes, show him who's in charge!"
-msgstr "Так, показати йому, хто головний!"
+msgstr "Так, покажи йому хто головний!"
 
 #: joringsbridge.xml
 msgid "Prince, I take the job!"
-msgstr "Принц, я беру роботу!"
+msgstr "Принц, я берусь за цю роботу!"
 
 #: joringsbridge.xml
 msgid "Prince, we take the job!"
-msgstr "Принц, беремо роботу!"
+msgstr "Принц, ми беремось за цю роботу!"
 
 #: joringsbridge.xml
 msgid "By Marek!"
-msgstr "За Марек!"
+msgstr "За Марека!"
 
 #: joringsbridge.xml
 msgid "Who is that?"
@@ -344,31 +353,31 @@ msgstr "Хто це?"
 
 #: joringsbridge.xml
 msgid "Aren't you the... auxiliary forces of the council? ##solo"
-msgstr "Хіба ви не ... допоміжні сили з ради? # # Соло"
+msgstr "Хіба ти не... допоміжна сила Ради? ##solo"
 
 #: joringsbridge.xml
 msgid "Aren't you the... auxiliary forces of the council?"
-msgstr "Хіба ви не ... допоміжні сили з ради?"
+msgstr "Хіба ви не... допоміжні сили Ради?"
 
 #: joringsbridge.xml
 msgid "... under the heel of a certain Soren Airpaw, at your service."
-msgstr "... під п'ятою певних Сорен Airpaw, до ваших послуг."
+msgstr "... під п'ятою деякого Сорена Повітряної Лапки, до ваших послуг."
 
 #: joringsbridge.xml
 msgid "Windclaw, you fool!"
-msgstr "Windclaw, дурень!"
+msgstr "Вітряний Пазур, дурень!"
 
 #: joringsbridge.xml
 msgid "Oops..."
-msgstr "На жаль ..."
+msgstr "Оой..."
 
 #: joringsbridge.xml
 msgid "Is that a problem for you?"
-msgstr "Це проблема для вас?"
+msgstr "Це є для вас проблемою?"
 
 #: joringsbridge.xml
 msgid "... probably not. Alright, even if I don't like it."
-msgstr "... ймовірно, немає. Добре, навіть якщо мені це не подобається."
+msgstr "... ймовірно ні. Добре, навіть якщо мені це не подобається."
 
 #: joringsbridge.xml
 msgid "Are you sure?"
@@ -376,27 +385,27 @@ msgstr "Ви впевнені?"
 
 #: joringsbridge.xml
 msgid "What if they kill the peasants along?"
-msgstr "Що робити, якщо вони вбивають селян разом?"
+msgstr "Що робити, якщо вони за одно вб'ють селян?"
 
 #: joringsbridge.xml
 msgid "Sergeant!"
-msgstr "Сержант!"
+msgstr "Сержанте!"
 
 #: joringsbridge.xml
 msgid "Only hand over the gold if the goblins are driven off and the peasants are alive in the end."
-msgstr "Тільки здати золото, якщо гобліни відвезли і селян живі в кінці кінців."
+msgstr "Видасьте золото, лише якщо виженуть гоблів і селяни лишуться живі."
 
 #: joringsbridge.xml
 msgid "Otherwise, do your work diligent."
-msgstr "В іншому випадку, зробіть свою сумлінну роботу."
+msgstr "Інакше, робіть свою сумлінну роботу."
 
 #: joringsbridge.xml
 msgid "As you wish, my Prinz."
-msgstr "Як хочете, мій Принц."
+msgstr "Як скажете, мій Принце."
 
 #: joringsbridge.xml
 msgid "That much distrust is really unnecessary during a war. "
-msgstr "Це багато недовіри дійсно непотрібні під час війни."
+msgstr "Так багато недовіри дійсно непотрібно під час війни."
 
 #: joringsbridge.xml
 msgid "Nobody?"
@@ -408,15 +417,15 @@ msgstr "Мій принц?"
 
 #: joringsbridge.xml
 msgid "I am true to my word."
-msgstr "Я вірні мої слова."
+msgstr "Я дотримуюсь свого слова."
 
 #: joringsbridge.xml
 msgid "Hand over the gold, if you find someone who helps you after all."
-msgstr "Здають золото, якщо ви знайдете людину, яка допоможе вам в кінці кінців."
+msgstr "Видай золото, якщо ти знайдеш когось на допомогу."
 
 #: joringsbridge.xml
 msgid "As you wish, my prince."
-msgstr "Як хочете, мій принц."
+msgstr "Як скажете, мій принце."
 
 #: joringsbridge.xml
 msgid "I'm sorry, good man."
@@ -424,5 +433,4 @@ msgstr "Мені дуже шкода, хороший чоловік."
 
 #: joringsbridge.xml
 msgid "I will pray that your family is safe long enough."
-msgstr "Я буду молитися, що ваша сім'я є безпечним досить довго."
-
+msgstr "Я буду молитися, що ваша сім'я була в безпеці якнайдовше."
